test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values_types/src/cfg_attr_program_type.sw
library;

#[cfg(program_type = true)]
pub fn not_ok() {}